# ConnectN

./: Board.c  Board.h  CMakeLists.txt  KodethonNCursesConnectN.out  Play.c  Play.h  README.md  View.c  View.h  Win.c  Win.h  main.c  move.c  move.h
